route using router component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,7 @@
 <a [linkTo]="'/'">Home</a><br/>
 <a [linkTo]="'/about'">About</a>
 
-<route path="/" [component]="HomeComponent"></route>
-<route path="/about" [component]="AboutComponent"></route>
+<router>
+  <route path="/" [component]="HomeComponent"></route>
+  <route path="/about" [component]="AboutComponent"></route>
+</router>
