--- a/src/app/lazy/lazy.component.html
+++ b/src/app/lazy/lazy.component.html
@@ -1,9 +1,9 @@
 <hr>
 <p>lazy works!</p>
 
-<a [linkTo]="'/lazy/lazy2'">Go Lazy 2</a><br>
+<a [linkTo]="'lazy2'">Go Lazy 2</a><br>
 <a [linkTo]="'/'">Go Home</a><br>
 
 <router>
-  <route path="/lazy2" [component]="lazy2Component"></route>
+  <route path="lazy2" [component]="lazy2Component"></route>
 </router>
