clean up child route on change

--- a/src/app/lazy/lazy.component.html
+++ b/src/app/lazy/lazy.component.html
@@ -5,5 +5,5 @@
 <a [linkTo]="'/'">Go Home</a><br>
 
 <router>
-  <route path="lazy2" [component]="lazy2Component"></route>
+  <route path="/lazy/lazy2" [component]="lazy2Component"></route>
 </router>
