--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 <a [linkTo]="'/'">Home</a><br/>
 <a [linkTo]="'/about'">About</a><br/>
 <a [linkTo]="'/lazy'">Lazy</a><br/>
-<a [linkTo]="'/about/brandon'" [queryParams]="'test=1'">About 2</a>
+<a [linkTo]="'/about/brandon'" [queryParams]="'test=1'">About 2</a><br/>
+<a [linkTo]="'/about/mike'">About 3</a>
 
 <router>
   <route path="/about/:me" [component]="AboutComponent"></route>
