remove relative links in linkTo

--- a/src/app/lazy/lazy.component.html
+++ b/src/app/lazy/lazy.component.html
@@ -1,8 +1,8 @@
 <hr>
 <p>lazy works!</p>
 
-<a [linkTo]="'lazy2'">Go Lazy 2</a><br>
-<a [linkTo]="'/'">Go Home</a><br>
+<a linkTo="/lazy/lazy2">Go Lazy 2</a><br>
+<a linkTo="/">Go Home</a><br>
 
 <router>
   <route path="/lazy/lazy2" [component]="lazy2Component"></route>
